[tool.poetry]
name = "tosaquestbot"
version = "0.1.4"
description = ""
authors = ["Stanislav <h3xcode@envs.net>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
tosaquestbot = "tosaquestbot.__main__:poetry_main"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
dependency-injector = {extras = ["pydantic"], version = "^4.41.0"}
alembic = "^1.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
coloredlogs = "^15.0.1"
asyncpg = "^0.28.0"
pydantic = "^2.3.0"
pydantic-settings = "^2.0.3"
transformers = {extras = ["torch"], version = "^4.33.1"}
torch = {version = "^2.0.1+cpu", source = "pytorch"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch"}
qreader = "^3.8"
aiohttp = "^3.8.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.10.1"
mypy = "^1.0.0"
wemake-python-styleguide = { git = "https://github.com/wemake-services/wemake-python-styleguide.git" }
pre-commit = "^3.3.3"
flake8 = "^6.1.0"
types-redis = "^4.5.5.2"
types-pytz = "^2023.3.0.0"
types-pyyaml = "^6.0.12.10"

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
